@@ -7107,11 +7107,17 @@ TestconcatobjCmd(
     
     list1Ptr = Tcl_NewStringObj("foo bar sum", -1);
     Tcl_ListObjLength(NULL, list1Ptr, &len);
-    TclInvalidateStringRep(list1Ptr);
+    if (list1Ptr->bytes != NULL) {
+	ckfree((char *) list1Ptr->bytes);
+	list1Ptr->bytes = NULL;
+    }
     
     list2Ptr = Tcl_NewStringObj("eeny meeny", -1);
     Tcl_ListObjLength(NULL, list2Ptr, &len);
-    TclInvalidateStringRep(list2Ptr);
+    if (list2Ptr->bytes != NULL) {
+	ckfree((char *) list2Ptr->bytes);
+	list2Ptr->bytes = NULL;
+    }
 
     /*
      * Verify that concat'ing a list obj with one or more empty strings does
